2001-03-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: Revise scheme for deallocation of thread
	dictionary ... keep it operating to avoid problems with stuff
	trying to use it while deing deallocated.  Log memory leaks.
	
2001-03-16  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/Makefile.postamble (after-install): Removed old 
	code for creating /etc/services.add when packaging.
	
	* Makefile.postamble
	($(INSTALL_ROOT_DIR)$(GNUSTEP_MAKEFILES)/Additional): New target;
	create the directory.  (before-install): Don't create the
	directory, but depend on the new target.
	* Resources/GNUmakefile.postamble: Idem for $(languagedir).
	* NSCharacterSets/Makefile.postamble: Idem for $(charsetdir).
	* NSTimeZones/Makefile.postamble: Idem for $(timezonedir).
	
2001-03-16  Manuel Guesdon <mguesdon@orange-concept.com>

	* Tools/pl*.m: added #include <Foundation/Foundation.h> to avoid 
		GNUSTEP Internal Error

2001-03-14  Adam Fedor  <fedor@gnu.org>

	* Source/libgnustep-base.def: Remove some classes that aren't
	used on MinGW32.

2001-03-13  Adam Fedor  <fedor@gnu.org>

	* configure.in: Check and set EXEEXT needed by some tests.
	* aclocal.m4: Fixes for constructor test.

2001-03-12  Jonathan Gapen  <jagapen@home.com>

	* Headers/gnustep/base/NSString.h: Change NSCyrillicStringEncoding
	to NSISOCyrillicStringEncoding, and likewise for Greek, Arabic, and
	Hebrew, to avoid ambiguity.  Add enum values for all remaining
	ISO-8859 character sets, plus UTF-7.
	* Source/GSXML.m: Update pursuant to above changes.
	* Source/NSString.m: Ditto.
	* Source/Unicode.m: Ditto.

2001-03-11  Adam Fedor  <fedor@gnu.org>

	* Source/NSThread.m: Remove runtime.h include since this isn't
	normally installed by objc, add back in extern variables.

2001-03-10  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.2
	* Makefile.postamble (before-install): Remove extra '/' before
	GNUSTEP_MAKEFILES

	* configure.in: Check for objc_thread_add in runtime.